# libucontext

./: .gitignore  .woodpecker.yml  CMakeLists.txt  LICENSE  Makefile  NEWS  README.md  libucontext_posix.c  meson.build  meson_options.txt  mkosi.conf  test_libucontext.c  test_libucontext_posix.c
.github/workflows/: alpine-tests.yaml  fedora-tests.yaml  mkosi-tests.yaml  mkosi.yml  test.yml
arch/aarch64/: defs.h  getcontext.S  makecontext.c  setcontext.S  startcontext.S  swapcontext.S
arch/aarch64/include/libucontext/: bits.h
arch/arm/: defs.h  getcontext.S  makecontext.c  setcontext.S  startcontext.S  swapcontext.S
arch/common/: bits.h  common-defs.h  common-trampoline.c
arch/common/include/libucontext/: bits.h
arch/loongarch64/: defs.h  getcontext.S  makecontext.S  makecontext.c  setcontext.S  startcontext.S  swapcontext.S
arch/m68k/: defs.h  getcontext.S  makecontext.c  setcontext.S  startcontext.S  swapcontext.S
arch/mips/: getcontext.S  makecontext.S  setcontext.S  startcontext.S  swapcontext.S
arch/mips64/: defs.h  getcontext.S  makecontext.S  setcontext.S  startcontext.S  swapcontext.S
arch/or1k/: getcontext.S  swapcontext.S
arch/ppc/: defs.h  getcontext.S  getcontext.c  makecontext.c  retfromsyscall.c  setcontext.S  setcontext.c  startcontext.S  swapcontext.S  swapcontext.c
arch/ppc64/: defs.h  getcontext.S  makecontext.c  setcontext.S  startcontext.S  swapcontext.S
arch/ppc64/include/libucontext/: bits.h
arch/riscv32/: getcontext.S  makecontext.c  setcontext.S  swapcontext.S
arch/riscv64/: defs.h  getcontext.S  makecontext.c  setcontext.S  startcontext.S  swapcontext.S  trampoline.c
arch/s390x/: defs.h  getcontext.S  makecontext.c  setcontext.S  startcontext.S  swapcontext.S
arch/sh/: defs.h  getcontext.S  makecontext.c  setcontext.S  swapcontext.S  trampoline.c
arch/x86/: defs.h  getcontext.S  makecontext.c  setcontext.S  startcontext.S  swapcontext.S
arch/x86_64/: defs.h  getcontext.S  makecontext.c  setcontext.S  startcontext.S  swapcontext.S
arch/x86_64/freestanding/: bits.h
include/: symbols.h
include/libucontext/: libucontext.h
(+2 files in other folders)
