option('freestanding', type : 'boolean', value : false,
       description: 'Do not use system headers')
option('export_unprefixed', type : 'boolean', value : true,
       description: 'Export POSIX 2004 ucontext names as alises')
option('build_posix', type : 'boolean', value : true,
       description: 'Build POSIX compatibility library')
option('cpu', type : 'string', value : '',
       description: 'Target CPU architecture for cross compile')
option('docs', type : 'boolean', value : false,
       description: 'Build and install man pages')
